--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,20 +29,12 @@ h1 {
     font-family: 'Optima';
     /* text-shadow: 2px 3.5px 2.5px rgba(177, 177, 177, 0.5); */
     text-align: left;
-    font-size: 38px;
-    padding-bottom: 20px;
-    padding-left: 5%;
-    padding-top: 2.5%;
+    font-size: 32px;
+    padding-left: 5vw;
+    padding-top: 4vh;
     margin: 0;
     font-weight: 400;
-    /* filter:invert(); */
     color: #dbdbdb; 
-    /* color: #c4c4c4;  */
-
-    /* background: -webkit-linear-gradient(#cccccc, rgb(119, 119, 119));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-    background-color: transparent; */
 }
 /* burger icon on PC */
 .burger {
@@ -506,7 +498,7 @@ ul {
 
     
     h1 {
-        font-size: 8vw;
+        font-size: 6vw;
     }
 
     #column figure figcaption {
