--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,6 @@ body {
     display: flex;
     flex-direction: column;
     background: rgb(8,8,8);
-    /* background: linear-gradient( rgb(15, 15, 15), rgb(20, 20, 20), rgb(15, 15, 15)); */
-    /* background-color: rgb(15, 15, 15); */
 }
 
 #active {
@@ -27,7 +25,6 @@ a {
 
 h1 {
     font-family: 'Optima';
-    /* text-shadow: 2px 3.5px 2.5px rgba(177, 177, 177, 0.5); */
     text-align: left;
     font-size: 32px;
     padding-left: 5vw;
@@ -57,7 +54,7 @@ h1 {
 }
 /* logo image next to title */
 #logo {
-    max-height: 6vh;
+    max-height: 5vh;
     width: auto;
     filter: grayscale(100%);
     background-color: transparent;
@@ -129,7 +126,21 @@ h1 {
     padding-bottom: 2rem;
     margin: 0 auto;
 }
-
+#percent {
+    position:fixed;
+    top: 45vh;
+    left: 5vw;
+    color:#ccc;
+    font-size: 24px;
+}
+#timeline {
+    margin-left: 20vw!important;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin: 0 auto;
+    width: 60%;
+}
 .photo {
     width: 100%;
 }
@@ -166,7 +177,7 @@ h1 {
 
 #half_column {
     column-width: 23rem;
-    padding-top: 5%;
+    padding-top: 12vh;
     place-self: center;
     align-content: space-evenly;
     width: 70%;
@@ -175,6 +186,7 @@ h1 {
 
 .photo_links {
     border-radius: 1rem 1rem 0 0;
+    border:solid 0.3px rgb(71, 71, 71);
     width: 100%;
     height: auto;
     display: inline-block;
@@ -184,10 +196,12 @@ h1 {
     font-size: 4vh;
     background-color: rgba(60, 60, 60, 0.2);
     border-radius: 1rem;
+    border:solid 0.3px rgb(71, 71, 71);
     color: #cccccc;
     font-weight: bolder;
     text-align: center !important;
-    padding-bottom: 5px;
+    /* display: inline-block; */
+    padding: 0;
 }
 
 #column figure {
@@ -372,9 +386,6 @@ ul {
 }
 
 
-.wrapper {
-    padding-left: 8.5rem;
-}
 /*footer*/
 .footer-dark {
     margin-top: auto;
@@ -593,4 +604,13 @@ ul {
     .burger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }  
+    .link_name {
+        font-size: 4vw;
+    }
+    #percent {
+        top: 45vh;
+        left: 1vw;
+        color:#ccc;
+        font-size: 20px;
+    }
 }
