--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,11 @@
     margin: 0;
     padding: 0;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 body {
+    overflow-y: scroll;
     margin: 0;
     height: 100vh;
     display: flex;
@@ -142,7 +145,7 @@ h1 {
     width: 70%;
 }
 .photo {
-    width: 100%;
+    max-height: 80vh;
 }
 
 /* Used for youtube iframewrapper */
@@ -227,7 +230,9 @@ h1 {
     font-weight: bold;
     font-size: 110%;
 }
-
+#timeline_items figcaption {
+    max-height: 20vh;
+}
 
 /*Image modal*/
 
@@ -492,10 +497,17 @@ ul {
   #percent > li {
     list-style: none;
     margin-top: 2vh;
+  }
+  #percent > li > a{
     color:rgba(255, 255, 255, 0.2);
+
 }
 
-
+#timeline_items{
+    height: 100vh;
+    max-height: 190vh;
+    width: auto !important;
+}
 
 /* mobile View */
 
@@ -616,6 +628,12 @@ ul {
         left: 1vw;
         font-size: 20px;
         /* background-color: rgba(0, 0, 0, 0.2); */
+    }
+    #timeline .gallery__item img {
+        padding-top: 25vh;
+    }
+    #timeline .gallery__item #buffalo {
+        padding-top: 0 !important;
     }
     
 }
