--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ h1 {
     top: 30vh;
     left: 2vw;
     color:#ccc;
-    font-size: 24px;
+    font-size: 2.2vh;
 }
 #timeline {
     margin-left: 15vw!important;
@@ -317,6 +317,7 @@ h1 {
 }
 #timeline .gallery__item img {
     padding-top: 4vh;
+    background-color: transparent;
 }
 /*profile*/
 #profile {
@@ -496,6 +497,11 @@ ul {
       transform: rotate(360deg);
     }
   }
+  #percent {
+      padding-left: 10px;
+      /* height: 100px; */
+      border-left: 2px solid white;
+  }
   #percent > li {
     list-style: none;
     margin-top: 2vh;
@@ -628,7 +634,7 @@ ul {
     #percent {
         top: 28vh;
         left: 1vw;
-        font-size: 20px;
+        font-size: 2.2vh;
         /* background-color: rgba(0, 0, 0, 0.2); */
     }
     #timeline .gallery__item img {
