--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,7 +542,7 @@ ul {
     font-size: 2.5vh;
     color: #ccc;
 }
-#exchange{
+#currency{
     position:inherit;
     text-align: center;
     font-size: 3vh;
