implementing profile page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,15 @@ a {
     background-color: transparent;
     opacity: 0.75;
 }
+.ion-social-facebook{
+    color:rgb(255, 208, 0);
+}
+.material-icons {
+    color:rgb(255, 208, 0);
+}
+.fa-linkedin-square {
+    color:rgb(255, 208, 0);
+}
 /* Navigation links at right top corner */
 .navLinks {
     display: flex;
@@ -88,7 +97,7 @@ a {
 
 .navLinks li a {
     color: #cccccc;
-    opacity: 0.5;
+    opacity: 0.8;
     padding-left: 1rem;
     padding-right: 1rem;
 }
@@ -123,7 +132,7 @@ a {
 }
 
 .selected {
-    color: rgb(211, 211, 211) !important;
+    color:rgb(255, 187, 0) !important;
     opacity: 1 !important;
 }
 
@@ -338,9 +347,8 @@ a {
     border-radius: 50%;
     justify-content: center;
     box-shadow:5px #ccc;
-
-    /* border: 2.5px solid #ccc; */
-    border-color: rgb(30, 30, 30);
+    border: 4.5px solid rgb(255, 208, 0);
+    /* border-color: rgb(30, 30, 30); */
     text-align: center;
 }
 
@@ -407,6 +415,7 @@ ul {
     margin-top: auto;
     /* border-style:solid 0.5px white; */
     border-style: none;
+    color:rgb(255, 208, 0);
     background-color: rgb(10, 10, 10);
 }
 .footer-top { 
@@ -429,9 +438,11 @@ ul {
 .footer-dark .item.social {
     text-align: center;
     padding-top: 20px;
+    color:rgb(255, 187, 0)
 }
 
 .footer-dark .item.social>a {
+    color:rgb(255, 187, 0) !important;
     font-size: 20px;
     width: 36px;
     height: 36px;
@@ -439,7 +450,7 @@ ul {
     display: inline-block;
     text-align: center;
     border-radius: 50%;
-    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4);
+    box-shadow: 0 0 0 1px rgb(255, 187, 0,0.6) ;
     margin: 0 8px;
     color: #fff;
     opacity: 0.75;
@@ -568,7 +579,7 @@ ul {
 #name {
   padding-top: 10vh;
    font-size: 4vh; 
-   color:#ccc;
+   color:rgb(255, 208, 0);
    font-weight: bolder;
    text-align: center;
 }
