--- a/assets/css/tetris.css
+++ b/assets/css/tetris.css
@@ -382,15 +382,17 @@
     .tetris-body {
         padding-left: 1.5rem;
     }
-
+    .preview {
+        padding-left: 1rem;
+    }
     .preview>ul {
-        width: 60px;
+        width: 52px;
         margin: 0 auto;
     }
 
     .preview>ul>li {
         width: 100%;
-        height: 15px;
+        height: 13px;
         padding: 0;
     }
 
@@ -399,8 +401,8 @@
     }
 
     .preview>ul>li>ul>li {
-        width: 15px;
-        height: 15px;
+        width: 13px;
+        height: 13px;
         outline: rgba(255, 255, 255, 0.9);
     }
 
